# coralmicro

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_arduino_core.sh  build_flashtool.sh  setup.sh
arduino/: package.py
arduino/variants/coral_micro_wifi/: cflags.txt
cmake/: toolchain-arm-none-eabi-gcc.cmake
examples/: CMakeLists.txt
examples/micro_ros_publisher/: CMakeLists.txt  micro_ros_publisher.cc
libs/: CMakeLists.txt
libs/base/: main_freertos_m7.cc
libs/micro_ros/: .gitignore  CMakeLists.txt  custom_memory_manager.c  default_transport.cc  default_transport.h  micro_ros.h  microros_allocators.c  microros_time.c  tcp_transport.cc  udp_transport.c  wifi_client.cc
libs/micro_ros/microros_static_library/library_generation/: library_generation.sh  toolchain_cortex_m4.cmake  toolchain_cortex_m7.cmake
scripts/: flashtool.py
